# fireguard-ros2-warehouse-robot

./: README.md  package.xml  setup.cfg  setup.py
launch/: fireguard_launch.py  spawn_robot.launch.py
scripts/: fire_detection_node.py  foam_effect_node.py  obstacle_avoidance_node.py  patrol_node.py  thermal_sensor_node.py  waypoint_patrol_node.py
urdf/: fireguard_robot.urdf
worlds/: fireguard_world.world
